Revert "Merge branch 'jest-test-logic' into ISSUE-42-sync-bamboo-nest"
This reverts commit d64ae2d48f3907633a723aea5c503668829441ad, reversing
changes made to f1275bd89532a43922faf38143c7bea9f6423d91.

reverting unintended jest branch merge
